staging/istio-mtls.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: team2-staging
spec:
  mtls:
    mode: STRICT
