staging/inventory-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: inventory-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip    
  namespace: team2-staging
spec:
  rules:
      - http:
          paths:
            - path: /products/*
              backend:
                serviceName: inventory
                servicePort: 8080
