staging/inventory-kong-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-kong-ingress
  annotations:
    kubernetes.io/ingress.class: kong
  namespace: team2-staging
spec:
  rules:
    - host: kong-staging.istio.dev1.eks.openshiftlabs.net
      http:
        paths:
          - path: /products/*
            pathType: Prefix
            backend:
              service:
                name: inventory
                port:
                  number: 8080
